# TinyScreenshoter

./: .gitattributes  .gitignore  LICENSE.txt  README.md  TinyScreenshoter.pro  TinyScreeshoter.pro  main.cpp  res.qrc  tiny_screenshoter.cpp  tiny_screenshoter.h  tiny_screenshoter.ui
.github/workflows/: windows-ci.yml
lib/: miniz.c  spng.c  stb_image_write.h
qt/: TinyScreenshoter.pro
qt/res/: res.qrc  res.rc
qt/src/: tiny_screenshoter.cpp  tiny_screenshoter.ui
src/: main.cpp  tiny_screenshoter.cpp  tiny_screenshoter.h
winapi/: CMakeLists.txt
winapi/cmake/: ci_windows_mingw_toolchain_x32.cmake
winapi/res/: resource.h  resource_ex.h  tinyscreen.manifest  tinyscreen.rc
winapi/src/: ftp_sender.c  ftp_sender.h  main.c  misc.c  misc.h  settings.c  settings.h  shot_data.c  shot_data.h  shot_hooks.c  shot_hooks.h  shot_proc.c  shot_proc.h  tray_icon.c  tray_icon.h
